recent update report + tank history

--- a/DOWTank/Views/Shared/_Layout.cshtml
+++ b/DOWTank/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                     <li>@Html.ActionLink("Tank Prep", "Prep", "Tank")</li>
                     <li>@Html.ActionLink("Tank Arrival", "TankArrivalUpdate", "Tank")</li>
                     <li>@Html.ActionLink("Audit Driver List", "AuditDriverList", "Report")</li>
+                    <li>@Html.ActionLink("Tank History", "Index", "TankHistory")</li>
                 </ul>
             </div>
         </div>
