--- a/DOWTank/Views/TankHistory/Index.cshtml
+++ b/DOWTank/Views/TankHistory/Index.cshtml
@@ -60,9 +60,7 @@
                         <tr>
                             <td>Propionic Acid
                             </td>
-                            <td>
-                                
-                            </td>
+                            <td></td>
                         </tr>
                     </tbody>
                 </table>
@@ -70,9 +68,74 @@
         </div>
     </div>
 
+    <div class="row mt10">
+        <div class="row no-margin">
+            <div class="col-md-12">
+                <h4>Moves</h4>
+            </div>
+        </div>
+    </div>
 
+    <div class="row">
+        <div class="col-md-2">
+            Search Column:
+        </div>
+        <div class="col-md-3">
+            <select class="form-control"></select>
+        </div>
+        <div class="col-md-1">
+            Text:
+        </div>
+        <div class="col-md-3">
+            <input type="text" class="form-control" />
+        </div>
+    </div>
+    <div class="row mt5">
+        <div class="col-md-12">
+            <table class="table table-condensed table-striped table-bordered table-responsive table-hover" id="tblTankInformation">
+                <thead>
+                    <tr>
+                        <th>Chassis</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Freeport
+                        </td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 
-
-
+    <div class="row mt10">
+        <div class="row no-margin">
+            <div class="col-md-12">
+                <h4>On-Hire History</h4>
+            </div>
+        </div>
+    </div>
+    
+    <div class="row mt5">
+        <div class="col-md-12">
+            <table class="table table-condensed table-striped table-bordered table-responsive table-hover" id="tblTankInformation">
+                <thead>
+                    <tr>
+                        <th>Charge/Shipment #</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>01-T3-6490169
+                        </td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 
 </div>
