front end search gui

--- a/DOWTank/Views/TankSearch/Index.cshtml
+++ b/DOWTank/Views/TankSearch/Index.cshtml
@@ -6,19 +6,27 @@
 
 
 <div class="well well-lg">
-
-    <!--filter-->
-    <div class="row mt5 mb10">
+    <!--title-->
+    <div class="row">
         <div class="col-md-12">
-            <div class="row">
-                <div class="col-md-12">
-                    <h4>Tank Search</h4>
-                </div>
-            </div>
+            <h4 class="dow-color col-md-2">Tank Search</h4>
+            <div class="ml10 mt5">
+                <button id="btnToggleFilter" class="btn btn-primary btn-default">Show/Hide Filter</button></div>
+        </div>
+    </div>
+    <!--filter-->
+    <div id="divFilter" class="row mt5 mb10">
+        <div class="col-md-12">
             @using (Html.BeginForm("Search", "TankSearch", FormMethod.Post))
             {
-                <div class="row">
-                    <div class="col-md-1">
+                <div class="row mt10 ">
+                    <div class="col-md-12 text-right">
+                        <input type="submit" value="Search" class="btn btn-default btn-primary" />
+                    </div>
+                </div>
+                
+                <div class="row mt20">
+                    <div class="col-md-2">
                         <div class="form-group">
                             <label class="control-label">Tank #</label>
                             <input type="text" name="TankNumber" class="form-control" />
@@ -42,94 +50,91 @@
                             @Html.DropDownList("LoadStatusTypeCD", null, new { @class = "form-control" })
                         </div>
                     </div>
-
-                    <div class="form-group">
-                        <div class="col-md-12 nopadding">
-                            <label>Load Point:*</label>
+                </div>
+             
+                <div class="row">
+                    <div class="col-md-12">
+                        <label>From:</label>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="col-md-4 nopadding">
+                            @Html.DropDownList("LoadPoint", null, new { @class = "form-control" })
                         </div>
-                        <div class="row no-row-margin">
-                            <div class="col-md-4 nopadding">
-                                @Html.DropDownList("LoadPoint", null, new { @class = "form-control" })
-                            </div>
-                            <div class="col-md-4 col-md-offset-1 mt5">
-                                <input id="ddlLoadPoint" name="LocationFromCode" type="hidden" style="width: 100%; box-sizing: border-box;">
-                            </div>
+                        <div class="col-md-4 col-md-offset-1 mt5">
+                            <input id="ddlLoadPoint" name="LocationFromCode" type="hidden" style="width: 100%; box-sizing: border-box;">
                         </div>
                     </div>
-
-                    <div class="form-group">
-                        <div class="col-md-12 nopadding">
-                            <label>Delivery Location:</label>
+                </div>
+             
+                <div class="row mt10">
+                    <div class="col-md-12">
+                        <label>To:</label>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="col-md-4 nopadding">
+                            @Html.DropDownList("LoadPoint", null, new { @class = "form-control", @id = "ddlDestination", @name = "ddlDestination" })
                         </div>
-                        <div class="row no-row-margin">
-                            <div class="col-md-4 nopadding">
-                                @Html.DropDownList("LoadPoint", null, new { @class = "form-control", @id = "ddlDestination", @name = "ddlDestination" })
-                            </div>
-                            <div class="col-md-4 col-md-offset-1 mt5">
-                                <input id="ddlDeliveryLocation" name="LocationToCode" type="hidden" style="width: 100%; box-sizing: border-box;">
-                            </div>
+                        <div class="col-md-4 col-md-offset-1 mt5">
+                            <input id="ddlDeliveryLocation" name="LocationToCode" type="hidden" style="width: 100%; box-sizing: border-box;">
                         </div>
                     </div>
-
-                    <div class="form-group">
-                        <div class="col-md-12 nopadding">
-                            <label>Charge Code:</label>
-                        </div>
-                        <div class="row no-row-margin">
-                            <div class="col-md-4 nopadding">
+                </div>
+               
+                <div class="row mt10">
+                    <div class="col-md-12">
+                        <div class="col-md-4 nopadding">
+                            <div class="form-group">
+                                <label>Charge Code:</label>
                                 <input id="ddlChargeCode" name="ChargeNbr" type="hidden" style="width: 100%; box-sizing: border-box;">
                             </div>
                         </div>
-                    </div>
-
-                </div>
-
-
-
-                <div class="row">
-                    <div class="col-md-1">
-                        <div class="form-group">
-                            <label class="control-label">Shipment</label>
-                            <input type="text" name="ShipmentNbr" class="form-control" />
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label class="control-label">Shipment</label>
+                                <input type="text" name="ShipmentNbr" class="form-control" />
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label class="control-label">On Hire</label>
-                            <input type="text" name="ChargeBlockOnHire" class="form-control" />
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label class="control-label">On Hire</label>
+                                <input type="text" name="ChargeBlockOnHire" class="form-control" />
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label class="control-label">Last Move Only</label>
-                            <input type="checkbox" id="chkLastMove" name="chkLastMove" class="form-control" />
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="form-group">
-                            <label class="control-label">Service Type</label>
-                            <input id="ddlService" name="ServiceType" style="width: 80%; box-sizing: border-box;">
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="form-group">
-                            <label class="control-label">Dedicated Product</label>
-                            <input id="ddlDedicatedProduct" name="DedicatedProduct" style="width: 80%; box-sizing: border-box;">
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="form-group">
-                            <label class="control-label">Dispatch Reason</label>
-                            <input id="ddlDispatchReason" name="DispatchReason" style="width: 80%; box-sizing: border-box;">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label class="control-label">Service Type</label>
+                                <input class="form-control" id="ddlService" name="ServiceType" style="width: 80%; box-sizing: border-box;">
+                            </div>
                         </div>
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="col-md-1">
-                        <input type="submit" value="Search" class="btn btn-default" />
+                    <div class="col-md-12">
+                        <div class="col-md-4 nopadding">
+                            <div class="form-group">
+                                <label class="control-label">Dedicated Product</label>
+                                <input class="form-control" id="ddlDedicatedProduct" name="DedicatedProduct" style="width: 80%; box-sizing: border-box;">
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label class="control-label">Reason</label>
+                                <input class="form-control" id="ddlDispatchReason" name="DispatchReason" style="width: 80%; box-sizing: border-box;">
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <br />
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" id="chkLastMove" name="chkLastMove" />
+                                    Last Move Only
+                                </label>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                
             }
         </div>
     </div>
@@ -151,7 +156,7 @@
                         {
                             if (@col.ColumnName != "DispatchID" && @col.ColumnName != "TankID" && @col.ColumnName != "Last Date Loaded" && @col.ColumnName != "Hours" && @col.ColumnName != "Lifts" && @col.ColumnName != "Instruct" && @col.ColumnName != "Type Service")
                             {
-                                <th>@col.ColumnName</th>
+                            <th>@col.ColumnName</th>
                             }
                         }
                     </tr>
@@ -164,7 +169,7 @@
                             {
                                 if (@col.ColumnName != "DispatchID" && @col.ColumnName != "TankID" && @col.ColumnName != "Last Date Loaded" && @col.ColumnName != "Hours" && @col.ColumnName != "Lifts" && @col.ColumnName != "Instruct" && @col.ColumnName != "Type Service")
                                 {
-                                    <td>@row[col.ColumnName]</td>
+                                <td>@row[col.ColumnName]</td>
                                 }
                             }
                         </tr>
@@ -196,83 +201,93 @@
             //mark end of document ready
         });
 
-        //Product ddl
-        $("#ddlProduct").select2({
-            minimumInputLength: 1,
-            cache: false,
-            ajax: {
-                url: "/Tank/PopulateProduct",
-                dataType: 'json',
-                quietMillis: 650,
-                data: function (term) {
-                    return {
-                        searchTerm: term // search term
-                    };
-                },
-                results: function (data) {
-                    return { results: data };
+        $(function() {
+            //Product ddl
+            $("#ddlProduct").select2({
+                minimumInputLength: 1,
+                cache: false,
+                ajax: {
+                    url: "/Tank/PopulateProduct",
+                    dataType: 'json',
+                    quietMillis: 650,
+                    data: function(term) {
+                        return {
+                            searchTerm: term // search term
+                        };
+                    },
+                    results: function(data) {
+                        return { results: data };
+                    }
                 }
-            }
+            });
+
+            //Load Point ddl
+            $("#ddlLoadPoint").select2({
+                minimumInputLength: 0,
+                cache: false,
+                ajax: {
+                    url: "/Tank/PopulateLoadPoint",
+                    dataType: 'json',
+                    quietMillis: 650,
+                    data: function(term) {
+                        return {
+                            searchTerm: term, // search term
+                            locationType: $("#LoadPoint").val()
+                        };
+                    },
+                    results: function(data) {
+                        return { results: data };
+                    }
+                }
+            });
+
+            //Destination ddl
+            $("#ddlDeliveryLocation").select2({
+                minimumInputLength: 0,
+                cache: false,
+                ajax: {
+                    url: "/Tank/PopulateLoadPoint",
+                    dataType: 'json',
+                    quietMillis: 650,
+                    data: function(term) {
+                        return {
+                            searchTerm: term, // search term
+                            locationType: $("#ddlDestination").val()
+                        };
+                    },
+                    results: function(data) {
+                        return { results: data };
+                    }
+                }
+            });
+
+            // charge code ddl
+            $("#ddlChargeCode").select2({
+                minimumInputLength: 0,
+                cache: true,
+                ajax: {
+                    url: "/Tank/PopulateChargeCode",
+                    dataType: 'json',
+                    quietMillis: 650,
+                    data: function(term) {
+                        return {
+                            searchTerm: term // search term
+                        };
+                    },
+                    results: function(data) {
+                        return { results: data };
+                    }
+                }
+            });
         });
 
-        //Load Point ddl
-        $("#ddlLoadPoint").select2({
-            minimumInputLength: 0,
-            cache: false,
-            ajax: {
-                url: "/Tank/PopulateLoadPoint",
-                dataType: 'json',
-                quietMillis: 650,
-                data: function (term) {
-                    return {
-                        searchTerm: term, // search term
-                        locationType: $("#LoadPoint").val()
-                    };
-                },
-                results: function (data) {
-                    return { results: data };
-                }
-            }
-        });
+        $(function() {
 
-        //Destination ddl
-        $("#ddlDeliveryLocation").select2({
-            minimumInputLength: 0,
-            cache: false,
-            ajax: {
-                url: "/Tank/PopulateLoadPoint",
-                dataType: 'json',
-                quietMillis: 650,
-                data: function (term) {
-                    return {
-                        searchTerm: term, // search term
-                        locationType: $("#ddlDestination").val()
-                    };
-                },
-                results: function (data) {
-                    return { results: data };
-                }
-            }
-        });
+            $("#btnToggleFilter").on('click', function() {
+                $("#divFilter").toggle();
+            });
 
-        // charge code ddl
-        $("#ddlChargeCode").select2({
-            minimumInputLength: 0,
-            cache: true,
-            ajax: {
-                url: "/Tank/PopulateChargeCode",
-                dataType: 'json',
-                quietMillis: 650,
-                data: function (term) {
-                    return {
-                        searchTerm: term // search term
-                    };
-                },
-                results: function (data) {
-                    return { results: data };
-                }
-            }
         });
-
+        
     </script>
 }
