--- a/DOWTank/Views/Shared/_Layout.cshtml
+++ b/DOWTank/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                     <li>@Html.ActionLink("Tank Arrival", "TankArrivalUpdate", "Tank")</li>
                     <li>@Html.ActionLink("Audit Driver List", "AuditDriverList", "Report")</li>
                     <li>@Html.ActionLink("Tank History", "Index", "TankHistory")</li>
+                    <li>@Html.ActionLink("Dispatch", "Index", "Dispatch")</li>
                 </ul>
             </div>
         </div>
